codex-rs/tui/src/bottom_pane/request_user_input/snapshots/codex_tui__bottom_pane__request_user_input__tests__request_user_input_multi_question_first.snap
---
source: tui/src/bottom_pane/request_user_input/mod.rs
expression: "render_snapshot(&overlay, area)"
---
                                                                                                                        
  问 题  1/2（ 2 个 未 回 答 ）                                                                                                 
  Choose an option.                                                                                                     
                                                                                                                        
  › 1. 选 项  1    First choice.                                                                                          
    2. 选 项  2    Second choice.                                                                                         
    3. Option 3  Third choice.                                                                                          
                                                                                                                        
  Tab 添 加 备 注  | 回 车 提 交 回 答  | ←/→ 切 换 问 题  | Esc 中 断
