codex-rs/tui/src/bottom_pane/request_user_input/snapshots/codex_tui__bottom_pane__request_user_input__tests__request_user_input_multi_question_last.snap
---
source: tui/src/bottom_pane/request_user_input/mod.rs
expression: "render_snapshot(&overlay, area)"
---
                                                                                                                        
  问 题  2/2（ 2 个 未 回 答 ）                                                                                                 
  Share details.                                                                                                        
                                                                                                                        
  › 输 入 你 的 回 答 （ 可 选 ）                                                                                                 
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
  回 车 全 部 提 交  | Ctrl+P/Ctrl+N 切 换 问 题  | Esc 中 断
