codex-rs/tui/src/bottom_pane/request_user_input/snapshots/codex_tui__bottom_pane__request_user_input__tests__request_user_input_unanswered_confirmation.snap
---
source: tui/src/bottom_pane/request_user_input/mod.rs
expression: "render_snapshot(&overlay, area)"
---
                                                                                
  要 在 仍 有 未 回 答 问 题 时 提 交 吗 ？                                                   
  2 个 问 题 未 回 答                                                                 
                                                                                
  › 1. 继 续 提 交   提 交 时 仍 有  2 个 未 回 答 题 。                                       
    2. 返 回       回 到 第 一 个 未 回 答 的 问 题 。                                        
                                                                                
                                                                                
                                                                                
                                                                                
  Press enter to confirm or esc to go back
